--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: backend
     build: ./backend
     volumes: 
-      ./backend:/usr/src/app
+      - ./backend:/usr/src/app
     ports: 
       - "5000:5000"
     links: 
