--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
 FROM node:14 
 
+RUN mkdir -p /usr/src/app
+
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package.json /usr/src/app/
 
 RUN npm install
 
-COPY . .
+COPY . /usr/src/app
 
 EXPOSE 5000
 
