--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   mongo:
     container_name: mongo
-    image: mongo
+    image: mongo:latest
     ports: 
       - "27017:27017"
       - "27018:27017"
