--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,25 +1,19 @@
-FROM node:14 
+FROM node:13.12.0-alpine
 
-RUN mkdir -p /usr/src/app
+# set working directory
+WORKDIR /app
 
-WORKDIR /usr/src/app
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json /usr/src/app/
+# install app dependencies
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm install --no-optional 
+RUN npm install react-scripts@3.4.1 -g --no-optional 
 
-RUN npm install
+# add app
+COPY . ./
 
-# Copy src files to image
-COPY . /usr/src/app
-
-# Debug show directory content
-RUN pwd
-
-RUN ls -lrt
-
-RUN npm run build
-
-RUN npm install -g serve
-
-EXPOSE 3000
-
-CMD [ "npm", "start" ]
+# start app
+CMD ["npm", "start"]
