--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -8,8 +8,12 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json ./
+
 COPY package-lock.json ./
+
 RUN npm install --no-optional 
+
+#Install react scripts
 RUN npm install react-scripts@3.4.1 -g --no-optional 
 
 # add app
