--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: ./backend
     links: 
       - mongo
+    networks: 
+      - yolonet
 
   mongo:
     container_name: mongo
@@ -13,6 +15,8 @@ services:
     ports: 
       - "27017:27017"
       - "27018:27017"
+    networks: 
+      - yolonet
 
   front:
     container_name: front_end
@@ -23,3 +27,9 @@ services:
     depends_on: 
       - backend
       - mongo
+    networks: 
+      - yolonet
+
+  networks:
+    yolonet:
+      driver: bridge
